# todocommander

./: .swp  Cargo.toml  README.md
src/: main.rs  tests.rs
src/app/: mod.rs
src/args/: mod.rs
src/config/: config.rs  mod.rs  params.rs  tests.rs
src/error_conversion/: mod.rs
src/model/: datedata.rs  mod.rs  status.rs  tests.rs  tododata.rs  todoelement.rs  todoentry.rs
src/model/tests/: command_tests.rs  mod.rs  serialization_tests.rs
