[package]
name = "todocommander"
version = "0.1.0"
authors = ["Ariel Viera <ariel.viera@gmail.com>"]
edition = "2018"
description = "Command line utility to manipulate todo.txt files"
license = "MIT"
repository = "https://github.com/avierax/tc"
homepage = "https://github.com/avierax/tc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"