[package]
name = "tcd"
version = "0.2.1"
authors = ["Ariel Viera <ariel.viera@gmail.com>"]
edition = "2018"
description = "TodoCommanDer. Console and command and line utility to manipulate todo.txt files"
license = "MIT"
repository = "https://github.com/avierax/todocommander"
homepage = "https://github.com/avierax/todocommander"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
directories = "3.0.1"
